Header alignment fix.

--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -158,6 +158,7 @@ header {
         top: -.75rem;
         right:0;
         display: block;
+        margin-right: 0;
         .header-nav-link {
           background-color: $orange;
           height: rem(70);
